加密保护/The Enigma Protector v2.70 Build 20110629/EnigmaSDK/VC/enigma_ide.h


// Crypt API
int __declspec(dllimport) __stdcall EP_CryptHashBuffer( int Hash, byte* Buffer, int Size, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashFileA( int Hash, char* FileName, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashFileW( int Hash, wchar_t* FileName, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashStringA( int Hash, char* Str, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashStringW( int Hash, wchar_t* Str, byte* Digest);

void __declspec(dllimport) __stdcall EP_CryptEncryptBuffer( byte* Buffer, int Size, char* Key);

void __declspec(dllimport) __stdcall EP_CryptEncryptBufferEx( byte* InBuffer, byte* OutBuffer, int Size, byte* Key, int KeySize);

void __declspec(dllimport) __stdcall EP_CryptDecryptBuffer( byte* Buffer, int Size, char* Key);

void __declspec(dllimport) __stdcall EP_CryptDecryptBufferEx( byte* InBuffer, byte* OutBuffer, int Size, byte* Key, int KeySize);

// Checkup API
BOOL __declspec(dllimport) __stdcall EP_CheckupCopies( int* Total, int* Current);

int __declspec(dllimport) __stdcall EP_CheckupCopiesTotal();

int __declspec(dllimport) __stdcall EP_CheckupCopiesCurrent();

BOOL __declspec(dllimport) __stdcall EP_CheckupIsProtected();

BOOL __declspec(dllimport) __stdcall EP_CheckupIsEnigmaOk();

BOOL __declspec(dllimport) __stdcall EP_CheckupVirtualizationTools();

// Enigma API
int __declspec(dllimport) __stdcall EP_EnigmaVersion();

// Splash screen
int __declspec(dllimport) __stdcall EP_SplashScreenShow();

void __declspec(dllimport) __stdcall EP_SplashScreenHide();